# the-missing-layer

./: .prettierignore  .prettierrc.mjs  README.md  astro.config.ts  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: deploy-pages.yml
python/tml/: README.md  pyproject.toml
python/tml/posts/deepseek_mhc/: 00_mhc.py
python/tml/posts/megatron/: 00_column_parallel_linear.py  01_row_parallel_linear.py  02_column_and_row_parallel_linear.py  03_tp_attention_block.py
python/tml/src/tml/: __init__.py
src/: config.ts  constants.ts
src/components/: AttentionHeatmapDemo.astro  BackButton.astro  Breadcrumb.astro  Header.astro
src/data/blog/: 00_attention_block_megatron.md  01_hyper_connections.md
src/data/blog/examples/: add_new_post.md  self-attention-explained-with-code.md  self-attention-explained-with-code.mdx
src/layouts/: Layout.astro  Main.astro
src/pages/: about.md  index.astro  search.astro
src/styles/: global.css  typography.css
